--- a/bag/templates/bag/bag.html
+++ b/bag/templates/bag/bag.html
@@ -12,29 +12,34 @@
 
 {% block content %}
 <div class="container h-100">
-    <div class="shadow"></div>
-    <div class="container mb-2">
-        <div class="row">
-            <div class="col">
-                <hr>
-                <h2>Shopping Bag</h2>
-                <hr>
+    <div class="bg-rose">
+        <div class="container mb-2">
+            <div class="row">
+                <div class="col text-uppercase text-center text-darkred mb-2">
+                    <hr>
+                    <h2>Shopping Bag <i class="fas fa-shopping-bag ml-2"></i></h2>
+                </div>
             </div>
-        </div>
 
-        <div class="row">
-            <div class="col">
-                {% if bag_items %}
-                    <div class="table-responsive rounded"></div>
-                {% else %}
-                    <p class="lead mb-5">You haven't added any items yet! <i class="fas fa-sad-tear"></i></p>
-                    <a href="{% url 'products'%}" class="btn btn-outline-black rounded-0 btn-lg">
-                        <span class="icon">
-                            <i class="far fa-hand-point-left"></i>
-                        </span>
-                        <span class="text-uppercase">Keep Shopping</span>
-                    </a>
-                {% endif %}
+            <div class="row bg-black text-center">
+                <div class="col text-rose text-uppercase mt-5">
+                    {% if bag_items %}
+                        <div class="table-responsive rounded"></div>
+                    {% else %}
+                        <p class="lead mb-5 text-capitalize"><i class="far fa-frown fa-lg"></i> - You haven't added any items yet!</p>
+                        <a href="{% url 'products'%}" class="btn btn-outline-black btn-red rounded-0 btn-lg mb-3">
+                            <span class="icon">
+                                <i class="fas fa-hand-point-left"></i>
+                            </span>
+                            <span class="text-uppercase"> Keep Shopping ? !</span>
+                        </a>
+                    {% endif %}
+                </div>
+            </div>
+            <div class="row">
+                <div class="col text-uppercase text-center text-darkred mt-4">
+                    <hr>
+                </div>
             </div>
         </div>
     </div>
