--- a/products/templates/products/products.html
+++ b/products/templates/products/products.html
@@ -112,11 +112,11 @@
                </div>
             </div>
         </div>
-        <div class="btt-button rounded-0 border border-black bg-black">  
+        <div class="btt-button rounded-0 border border-black bg-black mb-5 mr-4">  
             <a class="btt-link d-flex h-100">
                 <i class="fas fa-angle-double-up text-rose mx-auto my-auto font-weight-bold"></i>  
             </a>  
-            <p class="text-rose mx-auto my-auto text-center font-weight-bold">Top</p>
+            <p class="text-rose mx-auto my-auto text-center font-weight-bold">Page Top</p>
         </div>
     </div>
 </div>
