--- a/static/css/base.css
+++ b/static/css/base.css
@@ -70,8 +70,8 @@ hr {
 }
 
 .btn-red {
-    background: #d7263d;
-    color: #3a2d32;
+    background: #d7263d !important;
+    color: #ffeae7 !important;
 }
 
 .btn-rose {
@@ -91,8 +91,8 @@ hr {
 .btn-red:hover,
 .btn-red:active,
 .btn-red:focus {
-    background: #ffe3de;
-    color:#3a2d32;
+    background: #ffe3de !important;
+    color:#3a2d32 !important;
 }
 
 .btn-rose:hover,
@@ -144,14 +144,12 @@ a.category-badge > span.badge:hover  {
     height: 35px !important;
     width: 35px !important;
     position: fixed;
-    bottom: 15px;
-    right: 10px;
+    bottom: 25px;
+    right: 20px;
 }
 
 .btt-link {
     cursor: pointer;
-    height: 35px !important;
-    width: 35px !important;
 }
 
 /*---------- Media Queries --------*/
