--- a/bag/templates/bag/bag.html
+++ b/bag/templates/bag/bag.html
@@ -25,7 +25,66 @@
                 <div class="col text-rose text-uppercase mt-5">
                     {% if bag_items %}
                         <div class="table-responsive rounded">
-                            {{ bag_items }}
+                            <table class="table table-sm table-borderless text-rose">
+                                <thead>
+                                    <tr>
+                                        <th scope="col">Product Info</th>
+                                        <th scope="col"></th>
+                                        <th scope="col">Price</th>
+                                        <th scope="col">Quantity</th>
+                                        <th scope="col">Gross Total</th>
+                                    </tr>
+                                </thead>
+
+                                {% for item in bag_items %}
+                                    <tr>
+                                        <td class="p-4 w-25 h-2">
+                                            <img src="{{ item.product.image.url }}" alt="{{ item.product.name }}" class="img-fluid rounded">
+                                        </td>
+                                        <td class="py-3">
+                                            <p class="my-0"><strong>{{ item.product.name }}</strong></p>
+                                            <p class="my-0 small text-muted text-red">SKU: {{ item.product.sku|upper }}</p>
+                                        </td>   
+                                        <td class="py-3">
+                                            <p class="my-0">£{{ item.product.price }}</p>
+                                        </td>
+                                        <td class="py-3 text-right">
+                                            <p class="my-0 w-25">{{ item.quantity }}</p>
+                                        </td> 
+                                        <td class="py-3">
+                                            <p class="my-0">£{{ item.product.price }}</p>
+                                        </td>    
+                                    </tr>
+                                {% endfor %}
+                                <tr>
+                                    <td class="pt-5 text-right" colspan="5">
+                                        <h6><strong>Basket Total: £{{ total|floatformat:2 }}</strong></h6>
+                                        <h6>Delivery: £{{ delivery|floatformat:2 }}</h6>
+                                        <h4 class="mt-4"><strong>Net Total: £{{ grand_total|floatformat:2 }}</strong></h4>
+                                        {% if free_delivery_delta > 0 %}
+                                            <p class="mb-1 text-red">
+                                                Free Delivery is yours if you spend <strong>£{{ free_delivery_delta }}</strong> more!
+                                            </p>
+                                        {% endif %}
+                                    </td>
+                                </tr>
+                                <tr>
+                                    <td class="text-right" colspan="5">
+                                        <a href="{% url 'products' %}" class="btn btn-outline btn-red rounded-0 btn lg">
+                                            <span class="icon">
+                                                <i class="fas fa-hand-point-left"></i>
+                                            </span>
+                                            <span class="text-uppercase"> Keep Shopping ? !</span>
+                                        </a>
+                                        <a href="{% url 'products' %}" class="btn btn-outline btn-rose rounded-0 btn lg">
+                                            <span class="icon">
+                                                <i class="fas fa-cash-register"></i>
+                                            </span>
+                                            <span class="text-uppercase">Checkout</span>
+                                        </a>
+                                    </td>
+                                </tr>
+                            </table>
                         </div>
                     {% else %}
                         <p class="lead mb-5 text-capitalize"><i class="far fa-frown fa-lg"></i> - You haven't added any items to your basket yet!</p>
